--- a/CodeSnippets.cfg
+++ b/CodeSnippets.cfg
@@ -61,29 +61,31 @@ additional_info=""
 [delay]
 
 body="yield(get_tree().create_timer([@1]), \"timeout\")"
-additional_info="Delay for one second"
-other_info="Can a parametrize a snippet?"
-
-[preload]
-
-body="var [@1] = preload([@2]"
+additional_info="Delay for X seconds"
+other_info=""
 
 [load]
 
-body="load([@1]).instance() as [@9]"
+body="load().instance() as [@1]"
+other_info="Drag and drop resource from FileSystem"
+additional_info="Instance a resource"
 
 [add_child]
 
 body="add_child([@1].new())[@2]"
+additional_info="Instance a node"
 
 [change_scene]
 
 body="get_tree().change_scene()"
+other_info="Drag and drop scene from FileSystem"
+additional_info=""
 
 [node_path]
 
 body="export var [@1]_path: = NodePath()
 onready var [@1]: Node = get_node([@1]_path)[@2]"
+additional_info="A node parameter"
 
 [keypress]
 
